--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
   "prefix": ";;",
   "token": "TOKEN HERE",
+  "sqlite_file": "toromi.db",
   "guild_id": "GUILD_ID HERE",
   "emoji": {
     "play": "▶️",
