--- a/config.json
+++ b/config.json
@@ -19,6 +19,7 @@
     "cunny": "<:Cunny:856666244006281256>",
     "cringe": "🔴"
   },
+  "sametakes": {"same":"🦈", "take":"🎍"},
   "tplaylist": "PLb1JKHu_D4MTBXu-8MCFBJ855RpoUuYTf",
   "defaultrole": "denpanaut",
   "kokorole": "856669801005711401",
