feat: reimplement auto-roles
now supports more than one role if ever necessary

--- a/config.json
+++ b/config.json
@@ -18,7 +18,9 @@
     "cringe": "🔴"
   },
   "tplaylist": "PLb1JKHu_D4MTBXu-8MCFBJ855RpoUuYTf",
-  "defaultrole": "denpanaut",
+  "defaultRoles": [
+    987793980227985518
+  ],
   "kokorole": "856669801005711401",
   "defaultWoodConfig": {
     "threshold": 1,
