--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "discord-py>=2.6.4",
+    "dotenv>=0.9.9",
     "python-dotenv>=1.2.1",
 ]
