--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "discord-py>=2.6.4",
     "dotenv>=0.9.9",
+    "pynacl>=1.6.1",
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
 ]
