--- a/config-template.json
+++ b/config-template.json
@@ -26,7 +26,7 @@
         "threshold": 5,
         "channelId": "1090086858635096086"
     },
-    "Cringe": {
+    "cringe": {
         "threshold": 5,
         "timeoutTime": 20,
         "expireTime": 20,
