--- a/config-template.json
+++ b/config-template.json
@@ -30,7 +30,7 @@
         "threshold": 5,
         "timeoutTime": 10,
         "expireTime": 1200,
-        "channelId": "1090086858635096086"
+        "channelId": 1090086858635096086
     },
     "DeleteGuard": {
         "channelId": "1090086858635096086"
