feat: move runtime files to a /persist directory
in prep. for prod where we will have data that will survive docker
rebuilds

--- a/config-template.json
+++ b/config-template.json
@@ -1,6 +1,6 @@
 {
     "prefix": ";;",
-    "sqlite_file": "toromi.db",
+    "sqlite_file": "persist/toromi.db",
     "emoji": {
         "play": "\u25b6\ufe0f",
         "stop": "\u23f9\ufe0f",
